Closed
Bug 1288987
Opened 5 years ago
Closed 5 years ago
mtransport/test/sctp_unittest.cpp:111:18: error: 'struct sockaddr_conn' has no member named 'sconn_len' (DragonFly)
Categories
(Core :: WebRTC: Networking, defect, P2)
Tracking
()
RESOLVED
FIXED
mozilla50
People
(Reporter: jbeich, Assigned: jbeich)
References
Details
Attachments
(1 file)
58 bytes,
text/x-review-board-request
|
jesup
:
review+
drno
:
review+
gchang
:
approval-mozilla-aurora+
gchang
:
approval-mozilla-beta-
gchang
:
approval-mozilla-esr45+
|
Details |
Bitrig and DragonFly have inherited various |struct sockaddr_*| where *_len is first member. So, to unbreak build |struct sockaddr_conn| has to chase FreeBSD/OpenBSD version. $ ./mach build [...] media/mtransport/test/sctp_unittest.cpp: In constructor '{anonymous}::TransportTestPeer::TransportTestPeer(std::__cxx11::string, int, int, MtransportTestUtils*)': media/mtransport/test/sctp_unittest.cpp:102:17: error: 'struct sockaddr_conn' has no member named 'sconn_len' local_addr_.sconn_len = sizeof(struct sockaddr_conn); ^ media/mtransport/test/sctp_unittest.cpp:111:18: error: 'struct sockaddr_conn' has no member named 'sconn_len' remote_addr_.sconn_len = sizeof(struct sockaddr_conn); ^ gmake[4]: *** [config/rules.mk:936: sctp_unittest.o] Error 1
I need the following commits backported. Updating the whole netwerk/sctp/ directory maybe too much work with a greater risk for Tier1 platforms. sctp_update.log still refers to SVN, so it's hard to even measure risk. https://github.com/sctplab/usrsctp/commit/2a986e7d991a21870fcc7753617a9e5ac1dad885 https://github.com/sctplab/usrsctp/commit/f342f422d41326e3ba02dd668cf2e1f659bd66e1
See Also: → https://github.com/sctplab/usrsctp/pull/95
Review commit: https://reviewboard.mozilla.org/r/66746/diff/#index_header See other reviews: https://reviewboard.mozilla.org/r/66746/
Attachment #8774200 -
Flags: review?(rjesup)
Comment 3•5 years ago
|
||
Comment on attachment 8774200 [details] Bug 1288987 - Unbreak mtransport tests on more BSDs. https://reviewboard.mozilla.org/r/66746/#review63452 LGTM
Attachment #8774200 -
Flags: review+
Updated•5 years ago
|
Rank: 21
Priority: -- → P2
Comment 4•5 years ago
|
||
The patch has been merged upstream.
Comment 5•5 years ago
|
||
Comment on attachment 8774200 [details] Bug 1288987 - Unbreak mtransport tests on more BSDs. https://reviewboard.mozilla.org/r/66746/#review63728
Attachment #8774200 -
Flags: review?(rjesup) → review+
Keywords: checkin-needed
Pushed by cbook@mozilla.com: https://hg.mozilla.org/integration/mozilla-inbound/rev/3ccb3bbe75fa Unbreak mtransport tests on more BSDs. r=jesup
Keywords: checkin-needed
Comment 7•5 years ago
|
||
bugherder |
https://hg.mozilla.org/mozilla-central/rev/3ccb3bbe75fa
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla50
Comment on attachment 8774200 [details] Bug 1288987 - Unbreak mtransport tests on more BSDs. Approval Request Comment [ESR consideration]: Easier to run tests on Tier3 platforms [Feature/regressing bug #]: bug 790517 regression probably [User impact if declined]: Broken build on DragonFly unless --disable-tests is added to .mozconfig [Describe test coverage new/current, TreeHerder]: landed on m-c [Risks and why]: Low, can only break build due to typos or mismerge. [String/UUID change made/needed]: None
Attachment #8774200 -
Flags: approval-mozilla-esr45?
Attachment #8774200 -
Flags: approval-mozilla-beta?
Attachment #8774200 -
Flags: approval-mozilla-aurora?
Comment 9•5 years ago
|
||
Comment on attachment 8774200 [details] Bug 1288987 - Unbreak mtransport tests on more BSDs. It's too late for 48 as we already built rc2 and it doesn't seem to be a super critical. Take it in 49 and ESR. It should be in 45.4.0.
Attachment #8774200 -
Flags: approval-mozilla-esr45?
Attachment #8774200 -
Flags: approval-mozilla-esr45+
Attachment #8774200 -
Flags: approval-mozilla-beta?
Attachment #8774200 -
Flags: approval-mozilla-beta-
Attachment #8774200 -
Flags: approval-mozilla-aurora?
Attachment #8774200 -
Flags: approval-mozilla-aurora+
Comment 10•5 years ago
|
||
bugherderuplift |
https://hg.mozilla.org/releases/mozilla-aurora/rev/b2ef50220539
status-firefox49:
--- → fixed
Updated•5 years ago
|
Assignee: nobody → jbeich
Comment 11•5 years ago
|
||
bugherderuplift |
https://hg.mozilla.org/releases/mozilla-esr45/rev/c3b8d2761ab1
status-firefox-esr45:
--- → fixed
You need to log in
before you can comment on or make changes to this bug.
Description
•