Bug 1288987 - Unbreak mtransport tests on more BSDs. r=jesup, a=gchang

MozReview-Commit-ID: 41A3bKpN5pU